@@ -69,6 +69,13 @@
 						<onclick>Action(close)</onclick>
 						<visible>Container.Content(movies) | Container.Content(sets) | Container.Content(tvshows) | Container.Content(seasons)</visible>
 					</control>
+					<control type="button" id="11116">
+						<label>$LOCALIZE[31107]</label>
+						<include>DefaultSettingButton</include>
+						<onclick>Container.SetViewMode(55)</onclick>
+						<onclick>Action(close)</onclick>
+						<visible>Container.Content(tvshows) | Container.Content(seasons) | Container.Content(episodes) | Container.Content(movies) | Container.Content(sets) | Container.Content(musicvideos) | Container.Content(artists) | Container.Content(albums)</visible>
+					</control>
 					<control type="button" id="11112">
 						<label>$LOCALIZE[20021]</label>
 						<include>DefaultSettingButton</include>
@@ -88,7 +95,7 @@
 						<include>DefaultSettingButton</include>
 						<onclick>Container.SetViewMode(54)</onclick>
 						<onclick>Action(close)</onclick>
-						<visible>Container.Content(sets) | Container.Content(movies) | Container.Content(tvshows) | Container.Content(seasons) | Container.Content(episodes) | Container.Content(musicvideos) | Container.Content(images)</visible>
+						<visible>Container.Content(sets) | Container.Content(movies) | Container.Content(tvshows) | Container.Content(seasons) | Container.Content(episodes) | Container.Content(musicvideos) | Container.Content(images) | Container.Content(artists) | Container.Content(albums)</visible>
 					</control>
 					<control type="button" id="11115">
 						<label>$LOCALIZE[40016]</label>
@@ -96,13 +103,6 @@
 						<onclick>Container.SetViewMode(505)</onclick>
 						<onclick>Action(close)</onclick>
 						<visible>Container.Content(sets) | Container.Content(movies) | Container.Content(tvshows) | Container.Content(seasons)</visible>
-					</control>
-					<control type="button" id="11116">
-						<label>$LOCALIZE[31107]</label>
-						<include>DefaultSettingButton</include>
-						<onclick>Container.SetViewMode(55)</onclick>
-						<onclick>Action(close)</onclick>
-						<visible>Container.Content(tvshows) | Container.Content(seasons) | Container.Content(episodes) | Container.Content(movies) | Container.Content(sets) | Container.Content(musicvideos) | Container.Content(artists) | Container.Content(albums)</visible>
 					</control>
 					<control type="button" id="11117">
 						<label>$LOCALIZE[31102]</label>
