@@ -1,3 +1,6 @@
+[B]2.1.10[/B]
+• Fix missing view for music
+
 [B]2.1.9[/B]
 • Changes for Kodi 18
 • Add preview for view mode
